# pytcsschemahelper

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: pytcsschemahelper-project-plan.md  pytcsschemahelper-spec.md
src/pytcsschemahelper/: __init__.py  versions.py
tests/: __init__.py  test_versions.py
