[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytcsschemahelper"
version = "0.1.0"
description = "A Python library for generating, validating, and managing Technology Carbon Standard (TCS) Schema documents"
readme = "README.md"
requires-python = ">=3.9"
license = "CC0-1.0"
authors = [
    { name = "pytcsschemahelper contributors" },
]
keywords = [
    "tcs",
    "technology-carbon-standard",
    "carbon-emissions",
    "sustainability",
    "climate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.0,<5.0",
    "typing-extensions>=4.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
cli = [
    "click>=8.0,<9.0",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
tcs = "pytcsschemahelper.cli:cli"

[project.urls]
Homepage = "https://github.com/hellstromme/pytcsschemahelper"
Documentation = "https://hellstromme.github.io/pytcsschemahelper"
Repository = "https://github.com/hellstromme/pytcsschemahelper"
Issues = "https://github.com/hellstromme/pytcsschemahelper/issues"
Changelog = "https://github.com/hellstromme/pytcsschemahelper/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pytcsschemahelper"]
